--- a/website/newsletter/181/index.mdx
+++ b/website/newsletter/181/index.mdx
@@ -8,7 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-<!-- truncate -->
+This week I found many React Core PRs to look at. Too many, in fact, so I've saved a few for next week!
+
+After 2D with Skia, it's super excited to see React Native devs exploring the 3D space!
 
 **💡 [Check this newsletter on Twitter](https://slo.im/thread) - visual format 🎨**
 
