--- a/website/newsletter/181/index.mdx
+++ b/website/newsletter/181/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /181
-title: "This Week In React #181: React errors, Fast JSX, Flow, React-Query, Jotai, Inline styles, RSC, Next.js, RN 3D, Orbit, Gesture Handler, Skia, NewArch Helper, TC39, ESLint, VSCode..."
+title: "This Week In React #181: React errors, Fast JSX, Flow, React-Query, Jotai, Inline styles, RSC, Next.js, RTL, RN 3D, Orbit, Gesture Handler, Skia, NewArch Helper, TC39, ESLint, VSCode..."
 authors: [slorber]
 date: 04-10-2024
 ---
