--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -271,9 +271,8 @@ Quick Links are sponsored links inserted in the React or React-Native newsletter
 Reach out to [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Custom%20sponsorship%20offering) to explain us your marketing goals. We can create custom offers including:
 
 - custom placement bundles with quantity discounts
-- sponsored placement on our occasional [React articles](/articles)
-- sponsored honest review of your product
-- sponsored issue dedicated to your product
+- sponsored placement at the top of the email on our occasional [React articles](/articles)
+- sponsored smart placement, tightly integrated in an article we write related to your product
 
 ---
 
