--- a/website/newsletter/182/index.mdx
+++ b/website/newsletter/182/index.mdx
@@ -7,14 +7,13 @@ date: 04-17-2024
 
 Hi everyone!
 
-This week have a Next.js release, many interesting community blog posts.
+This week we have a Next.js release, many interesting community blog posts.
 
 We can also feel that the React core team is working hard to polish the remaining details for React 19. Unexpectedly, a v18.3 is finally planned with extra warnings. React Native 0.74 is also around the corner.
 
 This week I'd like to introduce you to [**ECMAScript News**](https://ecmascript.news/?utm_source=thisweekinreact). It's my favorite newsletter to keep up to date with ES, TC39, JS tooling, and runtimes.
 
 Next week we have [React Connection](https://reactconnection.io/) and [React Native Connection](https://reactnativeconnection.io/) conferences in Paris. See you there for those that attend 👋. You can still get a [-20% discount](https://www.billetweb.fr/react-connection-2024?discount=TWIR) with my partner code "TWIR".
-you to ECMAScript News. It's my favorite newsletter to keep up to date with ES, TC39, JS tooling, and runtimes.
 
 <!-- truncate -->
 
