--- a/website/newsletter/182/index.mdx
+++ b/website/newsletter/182/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /182
-title: "This Week In React #182: v18.3, useDeferredValue, Next.js, DevTools, Zustand, CSS-in-JS, R19, Remix, Jest, XState, Astro, RNSC, Strict DOM, 3D, Metro, Worklets, TC39, TypeScript, Rspack, GraphQL..."
+title: "This Week In React #182: v18.3, useDeferredValue, Next.js, DevTools, Zustand, CSS-in-JS, R19, Remix, Jest, XState, Astro, RNSC, Strict DOM, 3D, Metro, Worklets, TC39, TypeScript, Effect, Rspack, GraphQL..."
 authors: [slorber]
 date: 04-17-2024
 ---
