--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/179/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/179/index.mdx
@@ -55,23 +55,23 @@ With 23k stars and 500,000 daily users, react-admin is the framework of choice f
 
 [**React Server Components now in RedwoodJS**](https://redwoodjs.com/blog/rsc-now-in-redwoodjs)
 
-Bighorn, the next Redwood “epoch” starting at v8.0, will bet all-in on React Server Components. This article explains why Redwood now prefers RSCs over GraphQL, which wasn’t the best DX to get started with for most devs and projects. GraphQL will remain supported and can be used alongside RSCs in the same app. Redwood Cells now allow you to export a new “data” function to load the Cell data.
+Bighorn, la prochaine « ère » de Redwood à partir de la v8.0, misera à fond sur les React Server Components. Cet article explique pourquoi Redwood préfère désormais les RSC à GraphQL, qui n'était pas le meilleur DX avec lequel démarrer pour la plupart des développeurs et des projets. GraphQL reste supporté et peut être utilisé avec les RSC dans la même application. Les cellules Redwood vous permettent maintenant d'exporter une nouvelle fonction « data » pour charger les données de la cellule.
 
-You can try Redwood Bighorn today as a v8 canary release, but there are still many rough edges mentioned in the blog post, that they’ll fix before the official major release. There’s another interesting article to read [comparing Redwood routing conventions to Next.js and Remix](https://redwoodjs.com/blog/whats-different-comparing-the-router-in-nextjs-app-api-nextjs-pages-api-remix-and-redwoodjs).
+Vous pouvez essayer Redwood Bighorn dès aujourd'hui avec la version canari v8, mais il y a encore beaucoup d'imperfections mentionnées dans le billet du blog, qui seront corrigées avant la sortie officielle de la version majeure. Il y a un autre article intéressant à lire [comparant les conventions de routage de Redwood à Next.js et Remix](https://redwoodjs.com/blog/whats-different-comparing-the-router-in-nextjs-app-api-nextjs-pages-api-remix-and-redwoodjs).
 
 ---
 
 - 💸 [React Universe Conf - We care about a diverse lineup, so we prolong our CFP until April 5. We encourage all women in tech to submit talks!](https://www.reactuniverseconf.com/?utm_campaign=React_Universe_Conf&utm_source=email&utm_content=This_Week_in_React)
-- 👀 [React Core PR - useActionState](https://github.com/facebook/react/pull/28491): The PR is now merged and has been added to the [canary changelog](https://github.com/facebook/react/blob/main/CHANGELOG-canary.md).
-- 💬 [Astro proposal - Form actions](https://github.com/withastro/roadmap/discussions/871): Astro is exploring options for form submissions and mutations to feed their new Astro DB product, taking into consideration React 19 islands using useActionState() and useFormStatus().
+- 👀 [React Core PR - useActionState](https://github.com/facebook/react/pull/28491) : Le PR est maintenant fusionné et a été ajouté au [changelog de canary](https://github.com/facebook/react/blob/main/CHANGELOG-canary.md).
+- 💬 [Astro proposal - Form actions](https://github.com/withastro/roadmap/discussions/871) : Astro explore les options pour les soumissions de formulaires et les mutations pour alimenter leur nouveau produit Astro DB, en prenant en considération les îles React 19 utilisant useActionState() et useFormStatus().
 - 🐦 [Sebastian Silbermann (React core team) joins Vercel](https://twitter.com/sebsilbermann/status/1772229730747490691)
 - 📖 [Remix new docs - CSS files](https://remix.run/docs/en/main/guides/css-files)
-- 📜 [Power of Partial Prerendering with Bun](https://aralroca.com/blog/partial-prerendering): An interesting idea, using import attributes to pre-render React components thanks to a Bun macro.
-- 📜 [A faster React.memo()](https://romgrk.com/posts/react-fast-memo/): Argues that React is using a generic shallowCompare function for React.memo() that could be greatly optimized by using a specialized comparison function that assumes the things to compare are React props.
-- 📜 [What is a layout in React?](https://www.ericburel.tech/blog/what-layout-means-in-react): A good overview presenting how layouts are implemented differently in Remix, Next.js, or Astro.
-- 📜 [Diving into the Node.js Website Redesign](https://nodejs.org/en/blog/announcements/diving-into-the-nodejs-website-redesign): Node.js just launched a new Next.js website and shares behind-the-scenes details. They considered Nextra but settled on a custom Next.js setup. The site is statically built, using ISR for dynamic content.
-- 📜 [This Pattern Will Wreck Your React App's TS Performance](https://www.totaltypescript.com/react-apps-ts-performance): Matt recommends using “interface extends” instead of “&”, drawing on the story of a Sentry TS perf issue.
-- 📜 [Utilizing useOptimistic() across the component tree in Next.js](https://aurorascharff.no/posts/utilizing-useoptimistic-across-the-component-tree-in-nextjs/): Explains why and how to share the useOptimistic value through a React context.
+- 📜 [Power of Partial Prerendering with Bun](https://aralroca.com/blog/partial-prerendering) : Une idée intéressante, utiliser les attributs d'importation pour pré-rendre les composants React grâce à une macro Bun.
+- 📜 [A faster React.memo()](https://romgrk.com/posts/react-fast-memo/) : Démontre que React utilise une fonction générique shallowCompare pour React.memo() qui pourrait être grandement optimisée en utilisant une fonction de comparaison spécialisée qui suppose que les éléments à comparer sont des props React.
+- 📜 [What is a layout in React?](https://www.ericburel.tech/blog/what-layout-means-in-react) : Un excellent aperçu de la façon dont les mises en page sont implémentées différemment dans Remix, Next.js, ou Astro.
+- 📜 [Diving into the Node.js Website Redesign](https://nodejs.org/en/blog/announcements/diving-into-the-nodejs-website-redesign) : Node.js vient de lancer un nouveau site Next.js et partage les détails des coulisses. Ils ont envisagé Nextra mais ont opté pour une installation personnalisée de Next.js. Le site est construit de manière statique et utilise ISR pour le contenu dynamique.
+- 📜 [This Pattern Will Wreck Your React App's TS Performance](https://www.totaltypescript.com/react-apps-ts-performance) : Matt recommande d'utiliser « interface extends » au lieu de « & », en s'inspirant de l'histoire d'un problème de performance du TS de Sentry.
+- 📜 [Utilizing useOptimistic() across the component tree in Next.js](https://aurorascharff.no/posts/utilizing-useoptimistic-across-the-component-tree-in-nextjs/) : Explique pourquoi et comment partager la valeur useOptimistic dans un contexte React.
 - 📜 [Why I Like React (even in 2024)](https://ejosh.co/de/2024/03/why-i-like-react-even-in-2024/)
 - 📜 [Building a «hold to confirm» button with Framer Motion](https://sinja.io/blog/hold-to-confirm-button-react-framer-motion)
 - 📜 [React useEffect and objects as dependency - 4 approaches to avoid unnecessary re-renders](https://profy.dev/article/react-useeffect-with-object-dependency)
@@ -79,10 +79,10 @@ You can try Redwood Bighorn today as a v8 canary release, but there are still ma
 - 📜 [How to Build Your Own ChatGPT Clone Using Clerk & AWS Bedrock](https://conermurphy.com/blog/how-to-build-your-own-chatgpt-clone-using-clerk-aws-bedrock)
 - 📜 [Exploring useSyncExternalStore, a lesser-known React Hook](https://blog.logrocket.com/exploring-usesyncexternalstore-react-hook/)
 - 📜 [Remix Case Study - Shopify rebuilding Shop with Remix](https://remix.run/blog/shop-case-study)
-- 📦 [Waku 0.20 - Introducing “pages router”](https://waku.gg/blog/introducing-pages-router): Waku continues to push toward becoming a first-class React meta-framework. The latest release adds a lightweight file-based router and the introduction article presents its conventions. You can choose between static or dynamic rendering on a per-page basis.
-- 📦 [Kotekan - A simple React framework built on Bun, supporting React Server Components](https://kotekan.dev/blog/introducing-kotekan): My co-author Benedikt created his own experimental meta-framework, supporting React Server Components. Unlike other frameworks trying to stay decoupled from a specific runtime, Kotekan leverages tight coupling with Bun for both bundling and runtime. It looks like other interesting things are not mentioned in the intro post, notably a mobile app demo using react-strict-dom and StyleX. That’s impressive that the website is already built with it.
-- 📦 [Radix Themes 3.0](https://www.radix-ui.com/blog/themes-3): This new version adds custom color palettes, many new components, and a new layout engine.
-- 📦 [shadcn/ui update - Blocks](https://ui.shadcn.com/docs/changelog): Fully responsive, accessible, and composable ready-made components, starting with dashboard layouts and authentication pages.
+- 📦 [Waku 0.20 - Introducing “pages router”](https://waku.gg/blog/introducing-pages-router) : Waku continue de progresser pour devenir un méta-framework React de première classe. La dernière version ajoute un routeur léger basé sur les fichiers et l'article d'introduction présente ses conventions. Vous pouvez choisir entre un rendu statique ou dynamique par page.
+- 📦 [Kotekan - A simple React framework built on Bun, supporting React Server Components](https://kotekan.dev/blog/introducing-kotekan) : Mon co-auteur Benedikt a créé son propre méta-framework expérimental, supportant les React Server Components. Contrairement à d'autres frameworks qui essaient de rester découplés d'un runtime spécifique, Kotekan tire parti d'un couplage étroit avec Bun à la fois pour le bundling et le runtime. Il semble que d'autres choses intéressantes ne soient pas mentionnées dans le billet d'introduction, notamment une démo d'application mobile utilisant react-strict-dom et StyleX. Ce qui est impressionnant, c'est que le site web est déjà construit avec.
+- 📦 [Radix Themes 3.0](https://www.radix-ui.com/blog/themes-3) : Cette nouvelle version ajoute des palettes de couleurs personnalisées, de nombreux nouveaux composants et un nouveau moteur de mise en page.
+- 📦 [shadcn/ui update - Blocks](https://ui.shadcn.com/docs/changelog) : Composants prêts à l'emploi, entièrement responsifs, accessibles et composables, débutant par des mises en page de tableaux de bord et des pages d'authentification.
 - 📦 [@vite-pwa/remix - Zero-config PWA Plugin for Remix](https://github.com/vite-pwa/remix)
 - 📦 [Remotion 4.0.130 - Lambda renders are now faster](https://www.remotion.dev/blog/faster-lambda)
 - 🎥 [Jack Herrington - Finally Fix Your Issues With JS/React Memory Leaks](https://www.youtube.com/watch?v=qERgb3pWfu0)
@@ -116,35 +116,35 @@ WorkOS is a modern identity platform built for B2B SaaS.
 
 ## 📱 React-Native {#react-native}
 
-This section is now co-authored with [Benedikt](https://twitter.com/bndkt). Feel free to send us your comments by email or on [Twitter](https://twitter.com/bndkt)!
+Cette section est désormais co-écrite avec [Benedikt](https://twitter.com/bndkt). N'hésitez pas à nous envoyer vos commentaires par email ou sur [Twitter](https://twitter.com/bndkt) !
 
 [![React Navigation - Introducing Static API](/emails/issues/179/rnav.jpg)](https://reactnavigation.org/blog/2024/03/25/introducing-static-api)
 
 [**React Navigation - Introducing Static API**](https://reactnavigation.org/blog/2024/03/25/introducing-static-api)
 
-Arguably one of the most used and most important React Native libraries out there is React Navigation. The current major version (6) was introduced roughly three years ago, and now it seems we’re getting closer to the next major release. With v7 (currently in alpha), React Navigation is (re-)introducing a static API, which lets you define screens from an object configuration. This allows type inference (if you’ve ever created types for a dynamic React Navigation tree you know what that relieves you of) and also makes deep linking config easier (or partly automatic, even).
+L'une des bibliothèques React Native les plus utilisées et les plus importantes est sans doute React Navigation. La version majeure actuelle (6) a été introduite il y a environ trois ans, et il semble maintenant que nous nous rapprochions de la prochaine version majeure. Avec la v7 (actuellement en alpha), React Navigation (ré)introduit une API statique, qui vous permet de définir des écrans à partir d'une configuration d'objet. Cela permet l'inférence de types (si vous avez déjà créé des types pour un arbre dynamique de React Navigation, vous savez de quoi cela vous déleste) et rend également la configuration de liens profonds plus facile (ou partiellement automatique, même).
 
-Make sure to also read the [v7 upgrade guide](https://reactnavigation.org/docs/7.x/upgrading-from-6.x/) if you want to know about other changes coming!
+N'oubliez pas de lire également le [guide de mise à jour de la v7](https://reactnavigation.org/docs/7.x/upgrading-from-6.x/) si vous voulez connaître les autres changements à venir !
 
 ---
 
 - 💸 [Omlet - Measure React Native component usage in production. Track adoption and get data for codebase improvements in \<5 minutes setup](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-rn-mar-2024)
 - 🐦 [React Native Server Components on visionOS demo](https://twitter.com/SzymonRybczak/status/1772987077488935208)
 - 📜 [Building multi-window applications with React Native visionOS](https://www.oskarkwasniewski.dev/blog/react-native-visionos-multi-window-apps): Learn how to not only enable multiple windows in visionOS apps, but also how to share React state between them.
-- 📜 [Expo - How to replace App Center and CodePush](https://expo.dev/blog/how-to-replace-app-center-and-codepush): As reported last week, CodePush is shutting down on March 31, 2025.
+- 📜 [Expo - How to replace App Center and CodePush](https://expo.dev/blog/how-to-replace-app-center-and-codepush) : Comme nous l'avons annoncé la semaine dernière, CodePush fermera ses portes le 31 mars 2025.
 - 📜 Two Expo case studies: [Win your March Madness bracket with this Expo app](https://expo.dev/blog/march-madness-expo-app) and [incident.io harnesses the power of native modules and CNG](https://expo.dev/blog/incident-io-harnesses-the-power-of-native-modules-and-cng)
-- 📜 [Rethinking Layout Practices - A minimalistic Stack component that sets the foundation for doing layout well](https://www.reactnative.university/blog/rethinking-layout-practices): Interesting take: Never layout using padding or margin on Text or View components and instead introduce a Stack component (Tamagui does this for example).
-- 📜 [Optimize Your React Native App’s JavaScript Bundle](https://www.callstack.com/blog/optimize-react-native-apps-javascript-bundle): The title doesn’t give it away, but this is an interesting overview of alternative bundlers for RN. Sadly, all of these still have pretty big trade-offs compared to Metro.
+- 📜 [Rethinking Layout Practices - A minimalistic Stack component that sets the foundation for doing layout well](https://www.reactnative.university/blog/rethinking-layout-practices) : Un point de vue intéressant : Ne jamais faire de mise en page en utilisant padding ou margin sur les composants Text ou View et introduire à la place un composant Stack (Tamagui le fait par exemple).
+- 📜 [Optimize Your React Native App’s JavaScript Bundle](https://www.callstack.com/blog/optimize-react-native-apps-javascript-bundle) : Le titre ne donne pas d'indications, mais il s'agit d'un aperçu intéressant des bundlers alternatifs pour RN. Malheureusement, tous ces bundlers ont encore des compromis assez importants par rapport à Metro.
 - 📜 [How To Add Social Auth With AWS Amplify And React Native?](https://scientyficworld.org/social-auth-with-aws-amplify-and-react-native/)
 - 📜 [Optimize React Native Apps' Battery Drain With Mobile-Dedicated Libraries](https://www.callstack.com/blog/optimize-battery-drain-in-react-native-apps)
 - 📜 [How Can Higher-Order Components Improve Performance of React Native Apps?](https://www.callstack.com/blog/improve-react-native-performance-with-higher-ordered-components)
-- 📦 [@dev-plugins/redux](https://www.npmjs.com/package/@dev-plugins/redux): Plugin for Expo Dev Tools to debug Redux stores.
-- 📦 [react-native-screens 3.30.0](https://github.com/software-mansion/react-native-screens/releases/tag/3.30.0): Now includes a "go back" gesture and supports visionOS
+- 📦 [@dev-plugins/redux](https://www.npmjs.com/package/@dev-plugins/redux) : Plugin pour Expo Dev Tools pour déboguer les stores Redux.
+- 📦 [react-native-screens 3.30.0](https://github.com/software-mansion/react-native-screens/releases/tag/3.30.0) : Inclut désormais un mouvement de « retour en arrière » et prend en charge visionOS
 - 📦 [react-native 0.74.0-rc.5](https://github.com/facebook/react-native/releases/tag/v0.74.0-rc.5)
 - 🎙️ [RNR 292 - RNR Explains: Metro Bundler](https://reactnativeradio.com/episodes/rnr-292-rnr-explains-metro-bundler)
 - 🎥 [Theo - The New React Native Architecture](https://www.youtube.com/watch?v=BdPkVl4Y8TQ)
 - 🎥 [Rocket Ship 35 - React Native Skia with William Candillon](https://share.transistor.fm/s/15269c3f)
-- 🎥 [Simon: Build a FinTech Clone with React Native (API Routes, Zustand, Tanstack Query, FaceID, Charts, Clerk)](https://www.youtube.com/watch?v=iDZBeIgcixk): Usually we pick short, but valuable videos to save you time. This one is over 5½ hours long(!), but I highly recommend it if you want to observe a state-of-the-art RN app build from start to finish.
+- 🎥 [Simon: Build a FinTech Clone with React Native (API Routes, Zustand, Tanstack Query, FaceID, Charts, Clerk)](https://www.youtube.com/watch?v=iDZBeIgcixk) : En général, nous choisissons des vidéos courtes mais utiles pour vous faire gagner du temps. Celle-ci dure plus de 5 heures et demie (!), mais je vous la recommande vivement si vous voulez observer la construction d'une application RN de pointe, du début à la fin.
 
 ---
 
